# EsquizoCapp

./: .gitignore  CONTEXT.md  README.md  TESTES_MANUAIS.md  main.py  main_nooverride.py  pyproject.toml  requirements.txt  ruff.toml
arduino/: arduino_comunication_resumed.ino
docs/: notas-futuras.md
models/: BestModel_HSV_v1.pickle
scripts/: comparar_modos_aquisicao.py  rodar_ciclo_sem_gui.py
settings/: configs.json
src/esquizocap/: __init__.py
src/esquizocap/aplicacao/: __init__.py  servico_aquisicao.py
src/esquizocap/dominio/: __init__.py  ciclo_aquisicao.py  cor.py  pre_processamento.py  predicao.py
src/esquizocap/hardware/: __init__.py  arduino_fake.py  arduino_real.py  bitalino_direto.py  bitalino_fake.py  bitalino_real.py  constantes.py  contratos.py  fabrica.py  modo_aquisicao.py  portas_bluetooth.py  protocolo_bitalino.py
src/esquizocap/hardware/_engine_legado/: README.md  __init__.py  engine_fake.py  engine_real.py  interfaces_engine.py  server.py
src/esquizocap/infraestrutura/: __init__.py  config.py  guitools.py  log.py  persistencia.py  processos.py  recursos.py
src/esquizocap/interface/: __init__.py  arduino_gui.py  custom_gui.py  estado.py  hovertip_config.py  janela_principal.py  layout.py  loading_screen.py  medidores.py  paineis.py  textos.py
src/esquizocap/interface_qt/: Accordion.qml  Chip.qml  ConnectButton.qml  Dropdown.qml  EegTrace.qml  EsquizoCapView.qml  IconGlyph.qml  LabeledSlider.qml  LedStrip.qml  LogoMark.qml  RailButton.qml  Segmented.qml  SetSlider.qml  SettingsCard.qml  SlidePanel.qml  StatusDot.qml  Toggle.qml  WinBtn.qml  __init__.py  bandas_eeg.py  conexao_bitalino_assincrona.py  constantes_gui.py  controller.py  cores_visuais.py  estado.py  estado_ao_vivo.py  estado_aparencia_visual.py  estado_conexoes_hardware.py  estado_configuracao.py  gerenciador_gravacao_pendente.py  simulador_fita_led.py
tests/: conftest.py
tests/aplicacao/: test_servico_aquisicao.py
tests/dominio/: test_ciclo_aquisicao.py  test_cor.py  test_pre_processamento.py  test_predicao.py
tests/hardware/: test_contratos.py  test_fabrica.py  test_fakes.py  test_portas_bluetooth.py  test_protocolo_bitalino.py
tests/interface_qt/: test_controller.py  test_estado.py
tools/: arduino.py  guitools.py  hovertip_config.py  loading_screen.py  server.py  settings.py
tools/hardware/: __init__.py  arduino_fake.py  arduino_real.py  bitalino_fake.py  bitalino_real.py  engine_fake.py  engine_protocolo.py  engine_real.py  interfaces.py
