[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "esquizocap"
version = "0.1.0"
description = "Aquisição de EEG do BITalino, predição de cor e saída para fita de LED."
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "openpyxl",
    "pandas",
    "psutil",
    "PySide6>=6.5",
    # pylsl DEVE ficar em 1.16.2: da 1.18 em diante o pacote não exporta mais
    # `LostError`, exceção que a aquisição captura.
    "pylsl==1.16.2",
    "pyserial",
    "scikit-learn",
    "scipy",
]

[project.optional-dependencies]
dev = ["mypy", "pytest", "pytest-cov", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# `-q` porque a saída padrão do pytest é ruidosa; `--strict-markers` para que um marker
# escrito errado falhe em vez de ser ignorado em silêncio.
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["esquizocap.dominio", "esquizocap.hardware", "esquizocap.aplicacao"]
# A integração com a engine está arquivada e não roda: cobri-la só sujaria o relatório.
omit = ["*/_engine_legado/*"]

# Layout src/: o pacote `esquizocap` mora em src/esquizocap.
# Para que `python main.py` e `scripts/rodar_ciclo_sem_gui.py` resolvam o import,
# instale o projeto em modo editável a partir da raiz:  pip install -e .
[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
files = ["src/esquizocap"]
# interface_qt/: Property/Slot do PySide6 não tem stubs amigáveis ao mypy estrito.
# _engine_legado/: arquivado, não roda. infraestrutura/: ainda não tipada (PLANO_ACAO.md).
exclude = '(_engine_legado|interface_qt|infraestrutura)'

# Estrito nas camadas que já foram tipadas: núcleo, bordas de hardware e orquestração.
[[tool.mypy.overrides]]
module = ["esquizocap.dominio.*", "esquizocap.hardware.*", "esquizocap.aplicacao.*"]
strict = true

# Bibliotecas sem type stubs. Não silencia erros nossos — só evita que o mypy
# reclame de não achar tipos de dependências de terceiros.
[[tool.mypy.overrides]]
module = ["pylsl.*", "serial.*", "scipy.*", "sklearn.*"]
ignore_missing_imports = true
